# swl-optional

./: CMakeLists.txt  README.md
include/swl/: optional.hpp
swl/: optional.hpp
tests/: assignment.hpp  constexpr_op.cpp  constexpr_op.hpp  constructors.cpp  constructors.hpp  emplace.cpp  emplace.hpp  hash.cpp  hash.hpp  in_place.cpp  in_place.hpp  noexcept_trait.cpp  noexcept_trait.hpp  nullopt.cpp  nullopt.hpp  observers.cpp  observers.hpp  relops.cpp  relops.hpp  sfm_traits.cpp  sfm_traits.hpp  specialized_alg.cpp  specialized_alg.hpp  swap.cpp  swap.hpp  test_main.cpp  test_util.hpp
